button to /festival on main_page

--- a/app/views/shared/_post_category_menu.html.erb
+++ b/app/views/shared/_post_category_menu.html.erb
@@ -20,6 +20,6 @@
     </li>
     <li class="sponsors_ico <%= 'active' if controller_name == 'sponsors' %>"><a href="/sponsors">Попечительский совет</a></li>
   </ul>
-  <%= render 'shared/archive' %>
+  <%= render 'shared/archive_photo' %>
   <div class="clear"></div>
 </div>
