--- a/app/views/photos/festival.html.erb
+++ b/app/views/photos/festival.html.erb
@@ -21,6 +21,7 @@
   
   <div class="container am-container hidden-photos" id="am-container">
       <%= render 'photos', photos: @photos %>
+       <%= paginate @photos %>
   </div>
   <div class="clearfix"></div>
 
